--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <meta property="og:title" content="Elina Ailen | Fashion Designer">
     <meta property="og:description" content="Where Victorian elegance meets contemporary romance — crafting wearable poetry through lace, light, and shadow.">
     <meta property="og:type" content="website">
+    <meta name="robots" content="noindex, nofollow">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Cormorant+Garamond:ital,wght@0,300;0,400;0,500;1,300;1,400&family=Montserrat:wght@300;400;500&display=swap" rel="stylesheet">
